--- a/generateApp/client_app/public/assets/css/style.css
+++ b/generateApp/client_app/public/assets/css/style.css
@@ -2217,7 +2217,7 @@ textarea.input {
 .product {
 
   padding: 0px 0px !important;
- 
+
 }
 .video-mobile {
 height: 50% !important;
@@ -2251,7 +2251,7 @@ width: 80% !important;
 
 
 
-.product-detail ul li 
+.product-detail ul li
 {
   font-size: 18px;
   margin-bottom: 10px;
@@ -2298,4 +2298,45 @@ width: 80% !important;
 .pagination-number.active {
   color: #fff;
   background: #d3a04f;
+}
+
+.btnCategory-block {
+
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  overflow-x: auto;
+  gap: 5px;
+  padding: 20px 5px;
+
+}
+
+.category-btn {
+
+  padding: 10px 15px;
+  background-color: #223f3a;
+  border: none;
+  border-radius: 10px;
+  color: #FFF;
+  transition: 0.2s;
+  font-weight: bold;
+  text-wrap: nowrap;
+
+}
+
+.category-btn:focus{
+
+  background: #ffffff;
+  color: #000000;
+  box-shadow: 0px 0px 20px rgba(128, 128, 128, 0.4);
+
+}
+
+.categoryBlock:hover, .categoryBlock:focus {
+  opacity: 0.9;
+  color: #FFF;
+}
+
+.hideBlock {
+  display: none !important;
 }
