--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -146,9 +146,52 @@
 				</div>
 				<!-- section title -->
 				<div class="col-md-12">
-					<div class="section-title" style="background-color: #223f3a; border-radius: 50px;">
+					<div class="section-title d-flex" style="background-color: #223f3a; border-radius: 50px;">
 						<a href="/products/list/1"><h3 class="title" style="padding: 1%;  margin-bottom: 0; color: #d3a04f; margin-left: 15px;">Nos Produits</h3></a>
+						<div class="menu-toggle-2 pull-right display-none" style="margin: 5%;" >
+							<a href="#" style="color: #d3a04f;">
+								<i class="fa fa-bars"></i>
+								<span>Menu</span>
+							</a>
+						</div>
 					</div>
+					<div class="bs-example mobile-none">
+						<ul class="nav nav-pills mobile-none" role="tablist">
+							<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) {
+								for (var i = 0; i < category.length; i++){ %>
+						  <li role="presentation" class="dropdown"> <a  href="" onclick="showSubNav(<%= category[i].cat_id %>)" class="dropdown-toggle category-btn" id="drop<%= category[i].cat_id %>" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= category[i].cat_name %> <span class="caret"></span> </a>
+							<ul class="dropdown-menu" id="menu<%= category[i].cat_id %>" aria-labelledby="drop<%= category[i].cat_id %>">
+							  <li><a href="#"><%= category[i].sub_cat_name %></a></li>
+							</ul>
+						  </li>
+						  <%}}%>
+						</ul>
+
+						
+						<nav id="navigation" class="display-none">
+							<!-- container -->
+							<div class="container">
+								<!-- responsive-nav -->
+								<div id="responsive-nav-2">
+									<!-- NAV -->
+									<ul class="main-nav nav navbar-nav" >
+										<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) {
+											for (var i = 0; i < category.length; i++){ %>
+									  <li role="presentation" class="dropdown"> <a  href="" onclick="showSubNav(<%= category[i].cat_id %>)" class="dropdown-toggle category-btn" id="drop<%= category[i].cat_id %>" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= category[i].cat_name %> <span class="caret"></span> </a>
+										<ul class="dropdown-menu" id="menu<%= category[i].cat_id %>" aria-labelledby="drop<%= category[i].cat_id %>">
+										  <li><a href="#"><%= category[i].sub_cat_name %></a></li>
+										</ul>
+									  </li>
+									  <%}}%>
+									<!-- /NAV -->
+								</div>
+								<!-- /responsive-nav -->
+							</div>
+							<!-- /container -->
+						</nav>
+						<!-- /NAVIGATION -->
+					  </div>
+
 					<div class="btnCategory-block">
 						<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) {
 						for (var i = 0; i < category.length; i++){ %>
@@ -179,6 +222,7 @@
 					<div class="row">
 
 						<div class="products-tabs">
+							
 							<!-- tab -->
 							<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"}  %>
 							<div id="subcat<%= sub_category[i].sub_cat_id %>" class="tab-pane <%= active  %>">
@@ -239,7 +283,7 @@
 																				class="tooltipp">Détail</span></button>
 																</div>
 																<a class="primary-btn cta-btn" href="/checkout/<%= sub_category[i].products[j].product_id %>">
-																	<i class="fa fa-shopping-cart" style="margin-right: 2px;"></i>
+																	<i class="fa fa-shopping-cart mobile-none" style="margin-right: 2px;"></i>
 																	Commander
 																</a>
 															</div>
@@ -252,9 +296,23 @@
 
 											</div>
 
-
+											<div class="col-12">
+												<nav class="pagination-container" >
+													<button class="pagination-button prev-button" aria-label="Previous page" title="Previous page">
+														&lt;
+													</button>
+	
+													<div class="pagination-numbers">
+	
+													</div>
+	
+													<button class="pagination-button next-button" aria-label="Next page" title="Next page">
+														&gt;
+													</button>
+												</nav>
+											</div>
 										</div>
-
+										
 
 										<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
 											<div class=" col-12 mobile-col">
@@ -278,21 +336,7 @@
 										</div> -->
 
 										</div>
-										<div class="col-12">
-											<nav class="pagination-container" >
-												<button class="pagination-button prev-button" aria-label="Previous page" title="Previous page">
-													&lt;
-												</button>
-
-												<div class="pagination-numbers">
-
-												</div>
-
-												<button class="pagination-button next-button" aria-label="Next page" title="Next page">
-													&gt;
-												</button>
-											</nav>
-										</div>
+										
 
 
 
@@ -433,3 +477,4 @@
 	}
 
 </script>
+
