--- a/generateApp/client_app/public/assets/css/style.css
+++ b/generateApp/client_app/public/assets/css/style.css
@@ -102,6 +102,7 @@ ul, ol {
   text-align: center;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
+  font-size: 10px;
 }
 
 .primary-btn:hover, .primary-btn:focus {
@@ -2199,7 +2200,7 @@ textarea.input {
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 991px) {
  /*  [class*='col-xs'] {
     width: 100%;
   } */
@@ -2257,7 +2258,7 @@ width: 80% !important;
 }
 .img-mobile-prod
 {
-  height: 150px  !important;
+  height: 250px  !important;
   width: 100% !important;
 }
 }
@@ -2362,4 +2363,21 @@ width: 80% !important;
 
 .hideBlock {
   display: none !important;
+}
+
+.off-canvas {
+  position: fixed;
+  top: 0;
+  left: -250px; /* Hidden by default */
+  width: 250px;
+  height: 100%;
+  background-color: #333;
+  color: white;
+  transition: left 0.3s ease;
+  padding: 20px;
+  z-index: 1500;
+}
+
+.off-canvas.open {
+  left: 0; /* Show when open */
 }
