--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -149,14 +149,14 @@
 				<div class="col-md-12">
 					<div class="section-title d-flex" style="background-color: #223f3a; border-radius: 50px;">
 						<a href="/products/list/1"><h3 class="title" style="padding: 1%;  margin-bottom: 0; color: #d3a04f; margin-left: 15px;">Nos Produits</h3></a>
-						<div class="menu-toggle-2 pull-right display-none" style="margin: 5%;" >
+						<div  class="menu-toggle-2 pull-right display-none" style="margin: 5%;" >
 							<a href="#" style="color: #d3a04f;">
 								<i class="fa fa-bars"></i>
 								<span>Menu</span>
 							</a>
 						</div>
 					</div>
-					<div class="bs-example mobile-none">
+					<div class="bs-example">
 						<ul class="nav nav-pills mobile-none" role="tablist">
 							<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) {
 								for (var i = 0; i < category.length; i++){ %>
@@ -181,17 +181,19 @@
 							<!-- container -->
 							<div class="container">
 								<!-- responsive-nav -->
+
 								<div id="responsive-nav-2">
 									<!-- NAV -->
-									<ul class="main-nav nav navbar-nav" >
+									<a href="/products/list/1"><h3 class="title" style="padding: 1%;  margin-bottom: 0; color: #d3a04f; margin-left: 15px;">Nos Produits</h3></a>
+									<ul class="main-nav nav nav-pills navbar-nav" >
 										<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) {
 											for (var i = 0; i < category.length; i++){ %>
 									  <li role="presentation" class="dropdown <%= (i == 0) ? "active" : "" %>"> <a  href="" class="dropdown-toggle category-btn" id="drop<%= category[i].cat_id %>" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= category[i].cat_name %> <span class="caret"></span> </a>
 										<ul class="dropdown-menu" id="menu<%= category[i].cat_id %>" aria-labelledby="drop<%= category[i].cat_id %>">
 											<% category[i].subcat.forEach((subcat,j) => { if (i == 0 && j == 0) firstSubscat = subcat.sub_cat_id %>
 											
-												<li class="<%= (i == 0 && j == 0) ? "active" : "" %>">
-													<a data-toggle="tab" href="#subcat<%= subcat.sub_cat_id %>" class="tab-pane">
+												<li class="<%= (i == 0 && j == 0) ? "active" : "" %> nav-5">
+													<a data-toggle="tab" href="#subcat<%= subcat.sub_cat_id %>" class="tab-pane" style="color: white;">
 														<%= subcat.sub_cat_name %>
 													</a>
 												</li>
@@ -200,6 +202,7 @@
 										</ul>
 									  </li>
 									  <%}}%>
+									  </ul>
 									<!-- /NAV -->
 								</div>
 								<!-- /responsive-nav -->
@@ -235,7 +238,7 @@
 				<!-- /section title -->
 
 				<!-- Products tab & slick -->
-				<div class="col-md-12">
+				<div class="col-md-12" >
 					<div class="row">
 
 						<div class="products-tabs">
@@ -248,17 +251,17 @@
 									<!-- store products -->
 									<div class="row">
 
-										<div class="col-8 col-sm-8 col-lg-8 col-xs-12 mobile-col">
+										<div class="col-8 col-sm-8 col-lg-8 col-xs-12 mobile-col" style="background-image: url(/assets/img/bg.png); background-repeat: no-repeat; background-size: contain; background-position: center;">
 
 
 
-											<div class="paginated-list">
+											<div class="paginated-list" style="height: 100vh; margin-top: 25px;">
 
 												<!-- product -->
 												<% for (var j = 0; j < sub_category[i].products.length; j++) { %>
 
 													<!-- product -->
-													<div class="col-xs-6 col-3 col-lg-4 col-sm-6 mobile-col products-cat">
+													<div class="col-xs-6 col-3 col-lg-4 col-sm-6 mobile-col products-cat" >
 														<div class="product">
 															<div class="product-img text-center">
 																<a href="/product/<%= sub_category[i].products[j].product_id %>/details"><img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
@@ -380,6 +383,22 @@
 
 
 <%- include ("layout/footer") %>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+    const menuButton = document.getElementById('menuButton');
+    const offCanvasMenu = document.getElementById('offCanvasMenu');
+    const closeMenu = document.getElementById('closeMenu');
+
+    menuButton.addEventListener('click', function() {
+        offCanvasMenu.classList.toggle('open');
+    });
+
+    closeMenu.addEventListener('click', function() {
+        offCanvasMenu.classList.remove('open');
+    });
+});
+
+</script>
 <script>
 
 	const cat_block = document.querySelectorAll(".cat-block");
